Delete Collections.singletonMap